@@ -96,11 +96,19 @@ action or enter an email in the portal properties'
         subject = self.element.subject.replace("${url}", event_url)
         subject = subject.replace("${title}", event_title)
 
+        # encode stuff
+        if isinstance(message, unicode):
+            message = message.encode(email_charset)
+        if isinstance(subject, unicode):
+            subject = subject.encode(email_charset)
+        if isinstance(source, unicode):
+            source = source.encode(email_charset)
+
         for email_recipient in recipients:
-            mailhost.secureSend(message, email_recipient, source,
-                                subject=subject, subtype='plain',
-                                charset=email_charset, debug=False,
-                                From=source)
+            if isinstance(email_recipient, unicode):
+                email_recipient = email_recipient.encode(email_charset)
+            mailhost.send(message, email_recipient, source,
+                          subject=subject)
         return True
 
 class MailAddForm(AddForm):
